--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "multer": "^1.4.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "node-mysql": "^0.4.2"
   },
   "devDependencies": {},
   "scripts": {
