--- a/client/fronted/package.json
+++ b/client/fronted/package.json
@@ -17,11 +17,13 @@
     "@vue/cli-service": "^3.5.0",
     "axios": "^0.18.0",
     "babel-plugin-component": "^1.1.1",
-    "element-ui": "^2.7.2",
-    "mockjs": "^1.0.1-beta3",
+    "babel-plugin-import": "^1.11.0",
+    "lib-flexible": "^0.3.2",
     "node-sass": "^4.9.0",
     "nprogress": "^0.2.0",
+    "postcss-px2rem": "^0.3.0",
     "sass-loader": "^7.1.0",
+    "vant": "^1.6.18",
     "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
