--- a/client/fronted/package.json
+++ b/client/fronted/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "autoprefixer": "^9.5.1",
     "axios": "^0.18.0",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.11.0",
@@ -22,6 +23,7 @@
     "node-sass": "^4.9.0",
     "nprogress": "^0.2.0",
     "postcss-px2rem": "^0.3.0",
+    "postcss-pxtorem": "^4.0.1",
     "sass-loader": "^7.1.0",
     "vant": "^1.6.18",
     "vue-template-compiler": "^2.5.21"
