--- a/client/fronted/package.json
+++ b/client/fronted/package.json
@@ -26,7 +26,8 @@
     "postcss-pxtorem": "^4.0.1",
     "sass-loader": "^7.1.0",
     "vant": "^1.6.18",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vuex-persist": "^2.0.0"
   },
   "postcss": {
     "plugins": {
