--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "mysql": "^2.17.1",
     "node-mysql": "^0.4.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0"
+  },
   "scripts": {
     "start": "hotnode babel.js",
     "test": "npm test"
