--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
     "node-mysql": "^0.4.2"
