--- a/client/fronted/package.json
+++ b/client/fronted/package.json
@@ -25,7 +25,7 @@
     "postcss-px2rem": "^0.3.0",
     "postcss-pxtorem": "^4.0.1",
     "sass-loader": "^7.1.0",
-    "vant": "^1.6.18",
+    "vant": "^2.0.0-beta.2",
     "vue-template-compiler": "^2.5.21",
     "vuex-persist": "^2.0.0"
   },
