--- a/client/fronted/package.json
+++ b/client/fronted/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "look-for",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,32 +7,29 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.6",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "autoprefixer": "^9.5.1",
-    "axios": "^0.18.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "autoprefixer": "^9.8.5",
+    "axios": "^0.19.2",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-import": "^1.13.0",
     "lib-flexible": "^0.3.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
     "postcss-px2rem": "^0.3.0",
-    "postcss-pxtorem": "^4.0.1",
-    "sass-loader": "^7.1.0",
-    "vant": "^2.0.0-beta.2",
-    "vue-template-compiler": "^2.5.21",
-    "vuex-persist": "^2.0.0"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
+    "postcss-pxtorem": "^5.1.1",
+    "sass-loader": "^9.0.2",
+    "style-resources-loader": "^1.3.2",
+    "vant": "^2.9.3",
+    "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-template-compiler": "^2.6.11",
+    "vuex-persist": "^2.2.0"
   },
   "browserslist": [
     "> 1%",
