--- a/client/fronted/.gitignore
+++ b/client/fronted/.gitignore
@@ -2,16 +2,16 @@
 node_modules
 /dist
 
-# local env files
+# local env tool
 .env.local
 .env.*.local
 
-# Log files
+# Log tool
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# Editor directories and tool
 .idea
 .vscode
 *.suo
