--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,12 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.1",
     "mysql": "^2.17.1",
     "node-mysql": "^0.4.2"
   },
   "devDependencies": {
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "multer": "^1.4.2"
   },
   "scripts": {
     "start": "hotnode babel.js",
