--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-/server/node_modules/
+.DS_Store
+node_modules
+/dist
+
+# local env tool
+.env.local
+.env.*.local
+
+# Log tool
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and tool
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
