feat: add pm2 config

--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,8 +1,6 @@
 {
-  "plugins": [
-    ["transform-runtime", {
-      "polyfill": false,
-      "regenerator": true
-    }]
-  ]
+  "presets": [
+    "env"
+  ],
+  "plugins": []
 }
