--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,6 @@
   "description": "'寻根问祖'",
   "main": "index.js",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -16,11 +13,14 @@
     "node-mysql": "^0.4.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "multer": "^1.4.2"
   },
   "scripts": {
-    "start": "hotnode babel.js",
+    "start": "hotnode index.js",
+    "babel-start": "babel-node index.js",
     "test": "npm test"
   },
   "repository": {
