--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "multer": "^1.4.2"
   },
