--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "fs-extra": "^9.0.1",
     "multer": "^1.4.2"
   },
   "scripts": {
