--- a/client/fronted/package.json
+++ b/client/fronted/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "postcss-px2rem": "^0.3.0",
     "postcss-pxtorem": "^5.1.1",
+    "qiniu-js": "^3.1.1",
     "sass-loader": "^9.0.2",
     "style-resources-loader": "^1.3.2",
     "vant": "^2.9.3",
