--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "fs-extra": "^9.0.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "qiniu": "^7.3.2"
   },
   "scripts": {
     "start": "hotnode index.js",
